--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <!-- box 1 -->
             <div class="navlogo border">
-                <a  href="amazon.html"><button class="logo"></button></a>
+                <a  href="index.html"><button class="logo"></button></a>
             </div>
         
             <!-- box 2 -->
